Fixed font not showing

--- a/styles.css
+++ b/styles.css
@@ -40,13 +40,14 @@ h1 {
     }
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
 .game {
     height: calc(100vh - 98px);
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    font-family: 'Alien Encounters', sans-serif;
+    font-family: 'Monoton', cursive;
     color: rgb(255, 5, 47);
     text-shadow: 0px 0 10px rgb(107, 0, 128);
 }
@@ -154,7 +155,7 @@ div:last-child{
 
 footer {
     text-align: center;
-    font-family: 'Alien Encounters', sans-serif;
+    font-family: 'Monoton', cursive;
     color: rgb(255, 5, 47);
     font-size: 3vmin;
 }
@@ -172,7 +173,7 @@ footer {
     flex-direction: column;
     backdrop-filter: blur(6px);
     visibility: hidden;
-    font-family: 'Alien Encounters', sans-serif;
+    font-family: 'Monoton', cursive;
     color: rgb(255, 5, 47);
 }
 
@@ -191,7 +192,7 @@ a{
 .restart-btn {
     margin-top: 1vh;
     color: white;
-    font-family: 'Alien Encounters', sans-serif;
+    font-family: 'Monoton', cursive;
     background: rgb(247, 58, 58);
     font-size: 2vw;
     border: none;
